scripts/nullaway/annotator/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8.txt
../annotator/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/core/DataSeries.java:141: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java:210: error: [NullAway] passing @Nullable parameter 'g' where @NonNull is required
        stack.push(g);
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/JAwesomeChart.java:561: error: [NullAway] dereferenced expression ac.getRenderer() is @Nullable
        System.out.println(ac.getRenderer().getHumanReadableName() + " chart - mean time: " + ((t2 - t1) / i) + " ms");
                                           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors
